--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "restructuredtext.confPath": "${workspaceFolder}",
-    "python.pythonPath": "C:\\Users\\Guillermo\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
+    "python.pythonPath": "C:\\Users\\Guillermo\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
+    "restructuredtext.confPath": "${workspaceFolder}"
 }
